--- a/templates/base.html
+++ b/templates/base.html
@@ -64,12 +64,14 @@
                             <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-[#564F40] transition-all duration-300 group-hover:w-full"></span>
                         </a> 
                     </li>
+                    {% if user.is_authenticated %}
                     <li class="cursor-pointer group"> 
                         <a href="{% url 'my_projects' %}" class="relative pb-1 transition-colors duration-300 hover:text-[#564F40]">
                             Мои проекты
                             <span class="absolute bottom-0 left-0 w-0 h-0.5 bg-[#564F40] transition-all duration-300 group-hover:w-full"></span>
                         </a> 
                     </li>
+                    {% endif %}
                 </ul>
 
                 {% if user.is_authenticated %}
@@ -129,9 +131,11 @@
                     <li class="py-2 border-b border-gray-200 cursor-pointer">
                         <a href="{% url 'contact' %}" class="block transition-all duration-300 hover:text-[#564F40] hover:pl-2">Контакты</a>
                     </li>
+                    {% if user.is_authenticated %}
                     <li class="py-2 border-b border-gray-200 cursor-pointer">
                         <a href="{% url 'my_projects' %}" class="block transition-all duration-300 hover:text-[#564F40] hover:pl-2">Мои проекты</a>
                     </li>
+                    {% endif %}
                 </ul>
 
                 {% if user.is_authenticated %}
